--- a/index.html
+++ b/index.html
@@ -13,48 +13,51 @@
         <button id="searchBtn" type="button">Search</button>
     </form>
     </div>
-    <div id="hide" class="weatherBox">
-    <!-- todaysWeather will be created by javascript -->
-        <h2>Forecast for Today</h2>
-        <p id="img"></p>
-        <p id="temperatureInfo"></p>
-        <p id="windSpeedInfo"></p>
-        <p id="humidityInfo"></p>
-        <p id="weatherInfo"></p>
-    </div>
-    <div id="hide" class="weatherBox">
-            <h2>Forecast for Tomorrow</h2>
+    <section id="boxContainer">
+        <div class="weatherBox">
+        <!-- todaysWeather will be created by javascript -->
+            <h2 id="dayOne">Forecast for </h2>
             <p id="img"></p>
-            <p id="temperatureTomorrow"></p>
-            <p id="windSpeedTomorrow"></p>
-            <p id="humidityTomorrow"></p>
-            <p id="weatherTomorrow"></p>
+            <p id="temperatureInfo"></p>
+            <p id="windSpeedInfo"></p>
+            <p id="humidityInfo"></p>
+            <p id="weatherInfo"></p>
         </div>
-    <div id="hide" class="weatherBox">
-         <h2>Forecast for Day 3</h2>
-         <p id="img"></p>
-         <p id="temperatureDay3"></p>
-         <p id="windSpeedDay3"></p>
-          <p id="humidityDay3"></p>
-          <p id="weatherDay3"></p>
-      </div>
-      <div id="hide" class="weatherBox">
-        <h2>Forecast for Day 4</h2>
-        <p id="img"></p>
-        <p id="temperatureDay4"></p>
-        <p id="windSpeedDay4"></p>
-        <p id="humidityDay4Day4"></p>
-        <p id="weatherDay4"></p>
-    </div>
-    <div id="hide"class="weatherBox">
-        <h2>Forecast for day 5</h2>
-        <p id="img"></p>
-        <p id="temperatureDay5"></p>
-        <p id="windSpeedDay5"></p>
-        <p id="humidityDay5"></p>
-        <p id="weatherDay5"></p>
-    </div>
+        <div class="weatherBox">
+                <h2 id="dayTwo">Forecast for </h2>
+                <p id="img"></p>
+                <p id="temperatureDayTwo"></p>
+                <p id="windSpeedDayTwo"></p>
+                <p id="humidityDayTwo"></p>
+                <p id="weatherDayTwo"></p>
+            </div>
+        <div class="weatherBox">
+            <h2 id="dayThree">Forecast for </h2>
+            <p id="img"></p>
+            <p id="temperatureDayThree"></p>
+            <p id="windSpeedDayThree"></p>
+            <p id="humidityDayThree"></p>
+            <p id="weatherDayThree"></p>
+        </div>
+        <div class="weatherBox">
+            <h2 id="dayFour">Forecast for </h2>
+            <p id="img"></p>
+            <p id="temperatureDayFour"></p>
+            <p id="windSpeedDayFour"></p>
+            <p id="humidityDayDayFour"></p>
+            <p id="weatherDayFour"></p>
+        </div>
+        <div class="weatherBox">
+            <h2 id="dayFive">Forecast for </h2>
+            <p id="img"></p>
+            <p id="temperatureDayFive"></p>
+            <p id="windSpeedDayFive"></p>
+            <p id="humidityDayFive"></p>
+            <p id="weatherDayFive"></p>
+        </div>
+    </section>
 
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 <script src="assets/logic.js"></script>
 </html>
