added moment at top of page for current date/time

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <input id="searchBox" type="text" placeholder="Search.." name="search">
         <button id="searchBtn" type="button">Search</button>
     </form>
+    <div id="time">Today's Date: </div>
     </div>
     <section id="boxContainer">
         <div class="weatherBox">
